--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MohamadObeid/react-js-project.git"
+    "url": "git+https://github.com/MohamadObeid/react-js-project"
   },
   "author": "",
   "license": "ISC",
