--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
   "bugs": {
     "url": "https://github.com/MohamadObeid/react-js-project"
   },
-  "homepage": "https://github.com/basir/amazona#readme",
+  "homepage": "https://github.com/MohamadObeid",
   "description": ""
 }
