--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MohamadObeid/react-js-project"
+    "url": "git+https://github.com/MohamadObeid/React-Project.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MohamadObeid/react-js-project"
+    "url": "https://github.com/MohamadObeid/React-Project.git"
   },
   "homepage": "https://github.com/MohamadObeid",
   "description": ""
