--- a/note.env
+++ b/note.env
@@ -124,3 +124,5 @@ youtube: React Image Upload Made Easy
 
 // chat details 
 1. add user/employee bad rated
+
+// show signed in users in users manager
