--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "multer-s3": "^2.9.0",
     "package": "^1.0.1",
     "react-router-dom": "^5.2.0"
