--- a/note.env
+++ b/note.env
@@ -125,8 +125,7 @@ youtube: React Image Upload Made Easy
 // chat details 
 1. add user/employee bad rated
 
-
 //react-height for deleting and updating
-// show signed in users in users manager
 
 // if signed out set inactive, and stop auto refresh
+// update image: delete then substitute instead of posting new one
