--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.6.3",
     "axios": "^0.19.2",
     "control": "^0.2.3",
+    "flat-icons": "^1.0.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "mapbox-gl-geocoder": "^2.0.1",
