--- a/note.env
+++ b/note.env
@@ -129,3 +129,5 @@ youtube: React Image Upload Made Easy
 
 // if signed out set inactive, and stop auto refresh
 // update image: delete then substitute instead of posting new one
+
+// print doc: https://www.youtube.com/watch?v=NByi5l4G4M4
