--- a/note.env
+++ b/note.env
@@ -131,3 +131,6 @@ youtube: React Image Upload Made Easy
 // update image: delete then substitute instead of posting new one
 
 // print doc: https://www.youtube.com/watch?v=NByi5l4G4M4
+
+// اضخم شركات العالم وأكثرها مبيعا هي الشركات التي تمتلك منصة الكترونية (عرض صور ويبسايتات عالمية بشكل سريع)
+// امتلك منصة الكترونية خاصة فيك وباسمك الخاص والديزاين لبتختارو بسعر 300 ألف بالشهر
