--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://192.168.0.111:5000",
+  "proxy": "http://192.168.0.102:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +19,7 @@
     "flat-icons": "^1.0.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
     "mapbox-gl-geocoder": "^2.0.1",
     "package": "^1.0.1",
     "react": "^16.13.1",
