--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://192.168.0.106:5000",
+  "proxy": "http://192.168.2.134:3000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "control": "^0.2.3",
     "flat-icons": "^1.0.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "mapbox-gl-geocoder": "^2.0.1",
