--- a/package.json
+++ b/package.json
@@ -3,28 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "aws-sdk": "^2.715.0",
-    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "concurrently": "^5.3.0",
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
-    "execa": "^4.0.3",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
+    "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.20",
-    "mongoose-timezone": "^1.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
-    "multer-s3": "^2.9.0",
     "node-wifi": "^2.0.13",
     "package": "^1.0.1",
     "react-router-dom": "^5.2.0",
-    "telesignsdk": "^2.2.1"
+    "socket.io": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
