--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://MohamadObeid.github.io/sarah-originals",
   "name": "frontend",
   "proxy": "http://192.168.0.101:5000",
   "version": "0.1.0",
@@ -18,6 +19,7 @@
     "control": "^0.2.3",
     "flat-icons": "^1.0.0",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
@@ -40,6 +42,8 @@
     "uifx": "^2.0.7"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
