--- a/note.env
+++ b/note.env
@@ -1,3 +1,5 @@
+
+//rm -rf means disclude node_modules
 Today tasks:
 1. create tabs of sliders
 2. add brand, primary image, secondary image, primaryCategory... to category model //like in noon website
