--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,18 +18,15 @@
     "control": "^0.2.3",
     "flat-icons": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "mapbox-gl-geocoder": "^2.0.1",
     "package": "^1.0.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
     "react-fontawesome": "^1.7.1",
-    "react-id-swiper": "^4.0.0",
     "react-map-gl": "^5.2.7",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.3",
@@ -37,12 +34,11 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
-    "swiper": "^5.4.5",
     "uifx": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf node_modules && react-scripts build", 
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
