--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "https://192.168.0.101:5000",
+  "proxy": "http://192.168.0.101:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
