--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-project",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "12.16.3"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -41,7 +44,6 @@
   "bugs": {
     "url": "https://github.com/MohamadObeid/sarah-originals.git"
   },
-  "homepage": "https://github.com/MohamadObeid",
   "description": "",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
