--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dist": "^0.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
