--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "engines": {
-    "node": "12.16.3"
+    "node": "12.16.3",
+    "npm": "6.14.4"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -33,7 +34,7 @@
   },
   "scripts": {
     "start": "nodemon --watch backend --exec babel-node backend/server.js",
-    "build": "rm -rf dist && babel backend -d dist",
+    "build": "rm -rf dist && babel backend -d dist  && cd frontend && npm install && npm run build",
     "heroku-postbuild": "npm run build && cd frontend && npm install && npm run build"
   },
   "repository": {
