--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+dist
+/dist
 /node_modules
 node_modules
 /.pnp
@@ -22,3 +24,9 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+frontend/node_modules/**
+frontend/build/**
+package-lock.json
+yarn-lock.json
+frontend/package-lock.json
+frontend/yarn-lock.json
