--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "dist": "^0.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
@@ -29,6 +28,7 @@
     "@babel/core": "^7.10.2",
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
+    "eslint": "^7.18.0",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5"
   },
