--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "eslint-plugin-react": "^7.22.0",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
     "http": "0.0.1-security",
