--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
+npm-debug.log
+.DS_Store
+/*.env
 dist
 /dist
 /node_modules
