--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
     "react-fontawesome": "^1.7.1",
+    "react-id-swiper": "^4.0.0",
     "react-map-gl": "^5.2.7",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.3",
