--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "prettier": "2.0.5"
   },
   "scripts": {
+    "frontend": "cd frontend && npm start",
     "start": "nodemon --watch backend --exec babel-node backend/server.js",
     "build": "rm -rf dist && babel backend -d dist && cd frontend && npm install && npm run build",
-    "heroku-postbuild-x": "npm run build && cd frontend && npm install && npm run build"
+    "heroku-postbuild": "npm run build && cd frontend && npm install && npm run build"
   },
   "repository": {
     "type": "git",
