--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.3",
     "axios": "^0.19.2",
+    "caniuse-lite": "^1.0.30001179",
     "control": "^0.2.3",
     "flat-icons": "^1.0.0",
     "font-awesome": "^4.7.0",
