--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-id-swiper": "^4.0.0",
     "react-map-gl": "^5.2.7",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-tooltip": "^4.2.9",
     "redux": "^4.0.5",
