--- a/note.env
+++ b/note.env
@@ -1,5 +1,6 @@
 
 //rm -rf means disclude node_modules
+//CI= npm run build // build command in netlify to prevent Netlify from treating warnings as errors
 Today tasks:
 1. create tabs of sliders
 2. add brand, primary image, secondary image, primaryCategory... to category model //like in noon website
