--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
   "scripts": {
     "frontend": "cd frontend && npm start",
     "start": "nodemon --watch backend --exec babel-node backend/server.js",
-    "build": "rm -rf dist && babel backend -d dist && cd frontend && npm install && npm run build",
-    "heroku-postbuild": "npm run build && cd frontend && npm install && npm run build"
+    "clean": "rm -rf ./dist && cd frontend && rm -rf ./build && rm -rf ./.netlify",
+    "build": "npm run clean && cd frontend && npm run build && netlify deploy --dir=build --prod",
+    "heroku-postbuild": "cd frontend && npm run build"
   },
   "repository": {
     "type": "git",
