--- a/note.env
+++ b/note.env
@@ -1,6 +1,7 @@
 
 //rm -rf means disclude node_modules
 //CI= npm run build // build command in netlify to prevent Netlify from treating warnings as errors
+//npm config set script-shell bash    // sets bash as script shell (you can set cmd.exe)
 Today tasks:
 1. create tabs of sliders
 2. add brand, primary image, secondary image, primaryCategory... to category model //like in noon website
