--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "frontend": "cd frontend && npm start",
     "start": "npx kill-port 5000 && nodemon --watch backend --exec babel-node backend/server.js",
     "clean": "rm -rf ./dist && cd frontend && rm -rf ./build && rm -rf ./.netlify",
-    "build": "npm run clean && cd frontend && npm run build && netlify deploy --dir=build --prod",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "build": "npm run clean && npm run babel && cd frontend && npm run build && netlify deploy --dir=build --prod",
+    "heroku-postbuild": "npm run clean && npm run babel && cd frontend && npm install && npm run build",
+    "babel": "babel backend -d dist"
   },
   "repository": {
     "type": "git",
