--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://192.168.0.101:5000",
+  "proxy": "http://192.168.0.103:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,6 +23,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "mapbox-gl-geocoder": "^2.0.1",
+    "netlify-cli": "^3.4.6",
     "package": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
