--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.10.2",
     "@capacitor/cli": "2.4.6",
     "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.0.5"
   },
   "scripts": {
